优化代码,添加自定义参数设置

--- a/App/视频转码小工具/使用说明.md
+++ b/App/视频转码小工具/使用说明.md
@@ -10,11 +10,19 @@
 转码完成后 `output` 文件夹
 
 ### 更新记录
-2020-04-24
 
+2020-04-29
+v1.1
+1. 优化代码结构
+2. 添加了一个自定义模式，可以自定义转码参数
+
+
+
+2020-04-24
 v1.0
 1. 完成基本框架
 2. 添加视频转码、视频转gif、提取音频和图像序列转MP4
+
 
 
 
